--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -5,6 +5,11 @@
   width: 100%;
   padding-inline: 60px;
 }
+.page-title {
+  font-size: var(--font-size-1);
+  font-weight: bold;
+  padding-top: 48px;
+}
 @font-face {
   font-family: "Proxima Nova";
   src: url("../fonts/ProximaNova-Black.woff") format("woff");
@@ -26,4 +31,16 @@
 * {
   font-family: "Proxima Nova";
   font-weight: 100;
+}
+
+@media (max-width: 500px) {
+  .container {
+    padding-inline: 12px;
+  }
+  .page-title {
+    padding-top: 20px;
+  }
+  .table-container {
+    margin-top: 16px !important;
+  }
 }
